--- a/Blue_Berry_Winery.ipynb
+++ b/Blue_Berry_Winery.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from sklearn.compose import make_column_transformer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n"
    ]
   },
@@ -4643,7 +4643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -4685,7 +4685,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>7.0</td>\n",
-       "      <td>0.17</td>\n",
+       "      <td>0.170</td>\n",
        "      <td>0.74</td>\n",
        "      <td>12.8</td>\n",
        "      <td>0.045</td>\n",
@@ -4694,13 +4694,13 @@
        "      <td>0.99420</td>\n",
        "      <td>3.26</td>\n",
        "      <td>0.38</td>\n",
-       "      <td>12.2</td>\n",
+       "      <td>12.20</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>7.7</td>\n",
-       "      <td>0.64</td>\n",
+       "      <td>0.640</td>\n",
        "      <td>0.21</td>\n",
        "      <td>2.2</td>\n",
        "      <td>0.077</td>\n",
@@ -4709,13 +4709,13 @@
        "      <td>0.99560</td>\n",
        "      <td>3.27</td>\n",
        "      <td>0.45</td>\n",
-       "      <td>9.9</td>\n",
+       "      <td>9.90</td>\n",
        "      <td>red</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>6.8</td>\n",
-       "      <td>0.39</td>\n",
+       "      <td>0.390</td>\n",
        "      <td>0.34</td>\n",
        "      <td>7.4</td>\n",
        "      <td>0.020</td>\n",
@@ -4724,13 +4724,13 @@
        "      <td>0.99212</td>\n",
        "      <td>3.18</td>\n",
        "      <td>0.44</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>12.00</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6.3</td>\n",
-       "      <td>0.28</td>\n",
+       "      <td>0.280</td>\n",
        "      <td>0.47</td>\n",
        "      <td>11.2</td>\n",
        "      <td>0.040</td>\n",
@@ -4739,13 +4739,13 @@
        "      <td>0.99592</td>\n",
        "      <td>3.12</td>\n",
        "      <td>0.51</td>\n",
-       "      <td>9.5</td>\n",
+       "      <td>9.50</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>7.4</td>\n",
-       "      <td>0.35</td>\n",
+       "      <td>0.350</td>\n",
        "      <td>0.20</td>\n",
        "      <td>13.9</td>\n",
        "      <td>0.054</td>\n",
@@ -4754,13 +4754,13 @@
        "      <td>0.99888</td>\n",
        "      <td>3.11</td>\n",
        "      <td>0.50</td>\n",
-       "      <td>8.9</td>\n",
+       "      <td>8.90</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>7.2</td>\n",
-       "      <td>0.53</td>\n",
+       "      <td>0.530</td>\n",
        "      <td>0.14</td>\n",
        "      <td>2.1</td>\n",
        "      <td>0.064</td>\n",
@@ -4769,13 +4769,13 @@
        "      <td>0.99323</td>\n",
        "      <td>3.35</td>\n",
        "      <td>0.61</td>\n",
-       "      <td>12.1</td>\n",
+       "      <td>12.10</td>\n",
        "      <td>red</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>7.5</td>\n",
-       "      <td>0.27</td>\n",
+       "      <td>0.270</td>\n",
        "      <td>0.31</td>\n",
        "      <td>17.7</td>\n",
        "      <td>0.051</td>\n",
@@ -4784,13 +4784,13 @@
        "      <td>0.99900</td>\n",
        "      <td>3.09</td>\n",
        "      <td>0.64</td>\n",
-       "      <td>10.2</td>\n",
+       "      <td>10.20</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>6.8</td>\n",
-       "      <td>0.11</td>\n",
+       "      <td>0.110</td>\n",
        "      <td>0.27</td>\n",
        "      <td>8.6</td>\n",
        "      <td>0.044</td>\n",
@@ -4799,13 +4799,13 @@
        "      <td>0.99454</td>\n",
        "      <td>3.20</td>\n",
        "      <td>0.37</td>\n",
-       "      <td>9.9</td>\n",
+       "      <td>9.90</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>9.0</td>\n",
-       "      <td>0.44</td>\n",
+       "      <td>0.440</td>\n",
        "      <td>0.49</td>\n",
        "      <td>2.4</td>\n",
        "      <td>0.078</td>\n",
@@ -4814,13 +4814,13 @@
        "      <td>0.99780</td>\n",
        "      <td>3.23</td>\n",
        "      <td>0.58</td>\n",
-       "      <td>9.2</td>\n",
+       "      <td>9.20</td>\n",
        "      <td>red</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>7.1</td>\n",
-       "      <td>0.23</td>\n",
+       "      <td>0.230</td>\n",
        "      <td>0.30</td>\n",
        "      <td>2.6</td>\n",
        "      <td>0.034</td>\n",
@@ -4829,7 +4829,157 @@
        "      <td>0.99121</td>\n",
        "      <td>3.03</td>\n",
        "      <td>0.56</td>\n",
-       "      <td>11.3</td>\n",
+       "      <td>11.30</td>\n",
+       "      <td>white</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.280</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>0.066</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>2.96</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>9.10</td>\n",
+       "      <td>white</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.280</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.056</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>0.99440</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>9.50</td>\n",
+       "      <td>white</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>0.210</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>0.028</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>0.99168</td>\n",
+       "      <td>3.21</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>12.15</td>\n",
+       "      <td>white</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>8.1</td>\n",
+       "      <td>0.725</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.072</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0.99670</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>9.10</td>\n",
+       "      <td>red</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>5.2</td>\n",
+       "      <td>0.480</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.054</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>0.99270</td>\n",
+       "      <td>3.54</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>12.20</td>\n",
+       "      <td>red</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>0.280</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>0.040</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>0.99480</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>9.40</td>\n",
+       "      <td>white</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>7.9</td>\n",
+       "      <td>0.690</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>0.99620</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>9.90</td>\n",
+       "      <td>red</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>8.6</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>0.059</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>0.99882</td>\n",
+       "      <td>3.17</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>white</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>0.99221</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>11.00</td>\n",
+       "      <td>white</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>0.220</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>16.4</td>\n",
+       "      <td>0.048</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>182.0</td>\n",
+       "      <td>0.99904</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>8.80</td>\n",
        "      <td>white</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -4837,42 +4987,52 @@
        "</div>"
       ],
       "text/plain": [
-       "   fixed_acidity  volatile_acidity  citric_acid  residual_sugar  chlorides  free_sulfur_dioxide  total_sulfur_dioxide  density    pH  sulphates  alcohol wine_type\n",
-       "0            7.0              0.17         0.74            12.8      0.045                 24.0                 126.0  0.99420  3.26       0.38     12.2     white\n",
-       "1            7.7              0.64         0.21             2.2      0.077                 32.0                 133.0  0.99560  3.27       0.45      9.9       red\n",
-       "2            6.8              0.39         0.34             7.4      0.020                 38.0                 133.0  0.99212  3.18       0.44     12.0     white\n",
-       "3            6.3              0.28         0.47            11.2      0.040                 61.0                 183.0  0.99592  3.12       0.51      9.5     white\n",
-       "4            7.4              0.35         0.20            13.9      0.054                 63.0                 229.0  0.99888  3.11       0.50      8.9     white\n",
-       "5            7.2              0.53         0.14             2.1      0.064                 15.0                  29.0  0.99323  3.35       0.61     12.1       red\n",
-       "6            7.5              0.27         0.31            17.7      0.051                 33.0                 173.0  0.99900  3.09       0.64     10.2     white\n",
-       "7            6.8              0.11         0.27             8.6      0.044                 45.0                 104.0  0.99454  3.20       0.37      9.9     white\n",
-       "8            9.0              0.44         0.49             2.4      0.078                 26.0                 121.0  0.99780  3.23       0.58      9.2       red\n",
-       "9            7.1              0.23         0.30             2.6      0.034                 62.0                 148.0  0.99121  3.03       0.56     11.3     white"
+       "    fixed_acidity  volatile_acidity  citric_acid  residual_sugar  chlorides  free_sulfur_dioxide  total_sulfur_dioxide  density    pH  sulphates  alcohol wine_type\n",
+       "0             7.0             0.170         0.74            12.8      0.045                 24.0                 126.0  0.99420  3.26       0.38    12.20     white\n",
+       "1             7.7             0.640         0.21             2.2      0.077                 32.0                 133.0  0.99560  3.27       0.45     9.90       red\n",
+       "2             6.8             0.390         0.34             7.4      0.020                 38.0                 133.0  0.99212  3.18       0.44    12.00     white\n",
+       "3             6.3             0.280         0.47            11.2      0.040                 61.0                 183.0  0.99592  3.12       0.51     9.50     white\n",
+       "4             7.4             0.350         0.20            13.9      0.054                 63.0                 229.0  0.99888  3.11       0.50     8.90     white\n",
+       "5             7.2             0.530         0.14             2.1      0.064                 15.0                  29.0  0.99323  3.35       0.61    12.10       red\n",
+       "6             7.5             0.270         0.31            17.7      0.051                 33.0                 173.0  0.99900  3.09       0.64    10.20     white\n",
+       "7             6.8             0.110         0.27             8.6      0.044                 45.0                 104.0  0.99454  3.20       0.37     9.90     white\n",
+       "8             9.0             0.440         0.49             2.4      0.078                 26.0                 121.0  0.99780  3.23       0.58     9.20       red\n",
+       "9             7.1             0.230         0.30             2.6      0.034                 62.0                 148.0  0.99121  3.03       0.56    11.30     white\n",
+       "10            7.4             0.280         0.42            19.8      0.066                 53.0                 195.0  1.00000  2.96       0.44     9.10     white\n",
+       "11            7.8             0.280         0.22             1.4      0.056                 24.0                 130.0  0.99440  3.28       0.48     9.50     white\n",
+       "12            6.2             0.210         0.28             5.7      0.028                 45.0                 121.0  0.99168  3.21       1.08    12.15     white\n",
+       "13            8.1             0.725         0.22             2.2      0.072                 11.0                  41.0  0.99670  3.36       0.55     9.10       red\n",
+       "14            5.2             0.480         0.04             1.6      0.054                 19.0                 106.0  0.99270  3.54       0.62    12.20       red\n",
+       "15            6.5             0.280         0.27             5.2      0.040                 44.0                 179.0  0.99480  3.19       0.69     9.40     white\n",
+       "16            7.9             0.690         0.21             2.1      0.080                 33.0                 141.0  0.99620  3.25       0.51     9.90       red\n",
+       "17            8.6             0.330         0.34            11.8      0.059                 42.0                 240.0  0.99882  3.17       0.52    10.00     white\n",
+       "18            5.1             0.330         0.27             6.7      0.022                 44.0                 129.0  0.99221  3.36       0.39    11.00     white\n",
+       "19            6.5             0.220         0.50            16.4      0.048                 36.0                 182.0  0.99904  3.02       0.49     8.80     white"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wines2 = wines.head(10).drop([\"quality\", \"quality_label\"], axis=1)\n",
+    "wines2 = wines.head(20).drop([\"quality\", \"quality_label\"], axis=1)\n",
     "\n",
     "wines2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 1. 0. 0. 0. 1. 0. 0. 1. 0.]\n",
-      "[1. 0. 1. 1. 1. 0. 1. 1. 0. 1.]\n",
-      "Accuracy: 100.00\n"
+      "[0. 1. 0. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 1. 1. 0. 1. 0. 0. 0.]\n",
+      "[1. 0. 1. 1. 1. 0. 1. 1. 0. 1. 1. 1. 1. 0. 0. 1. 0. 1. 1. 1.]\n",
+      "Accuracy: 87.50\n"
      ]
     }
    ],
@@ -4891,7 +5051,7 @@
     "# We split our data into input and output columns X being input and Y being the output or what we want to predict\n",
     "X = transformed[:,2:]\n",
     "Y = transformed[:,0]\n",
-    "Z = transformed[:,1]\n",
+    "Z = transformed[:,1] # this is the opposite of Y. We create it to test the prediction. Just a thought that it should work.\n",
     "\n",
     "print(Y)\n",
     "print(Z)\n",
@@ -4899,8 +5059,19 @@
     "# split the dataset into train and test sets\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size= 0.40, random_state= 1, shuffle= True)\n",
     "\n",
+    "# We perform feature Scaling\n",
+    "\n",
+    "# fit scaler on training data\n",
+    "norm = MinMaxScaler().fit(X_train)\n",
+    "\n",
+    "# transform training data\n",
+    "X_train_norm = norm.transform(X_train)\n",
+    "\n",
+    "# transform testing data\n",
+    "X_test_norm = norm.transform(X_test)\n",
+    "\n",
     "#define the model\n",
-    "model1 = LogisticRegression()\n",
+    "model1 = LogisticRegression(max_iter= 200)\n",
     "\n",
     "#fitting model on training set\n",
     "model1.fit(X_train, Y_train )\n",
@@ -4917,10 +5088,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Questions for Killian - why doesn't Z work?\n",
+    "# Also why does this show?"
+   ]
   }
  ],
  "metadata": {
