Minor updates to code

--- a/WWines_3L.ipynb
+++ b/WWines_3L.ipynb
@@ -1903,44 +1903,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ANOVA test for mean fixed_acidity across all wines with different quality ratings\n",
+      "ANOVA test for mean fixed_acidity across all white wines with 3 different quality ratings\n",
       "F Statistic: 21.923026494425756 \tp-value: 3.321537387880916e-10 \n",
       "\n",
-      "ANOVA test for mean volatile_acidity across all wines with different quality ratings\n",
+      "ANOVA test for mean volatile_acidity across all white wines with 3 different quality ratings\n",
       "F Statistic: 133.6668084396585 \tp-value: 3.012823078922054e-57 \n",
       "\n",
-      "ANOVA test for mean citric_acid across all wines with different quality ratings\n",
+      "ANOVA test for mean citric_acid across all white wines with 3 different quality ratings\n",
       "F Statistic: 0.23254245986965996 \tp-value: 0.7925248530727159 \n",
       "\n",
-      "ANOVA test for mean residual_sugar across all wines with different quality ratings\n",
+      "ANOVA test for mean residual_sugar across all white wines with 3 different quality ratings\n",
       "F Statistic: 21.934773835107606 \tp-value: 3.2830889157949124e-10 \n",
       "\n",
-      "ANOVA test for mean chlorides across all wines with different quality ratings\n",
+      "ANOVA test for mean chlorides across all white wines with 3 different quality ratings\n",
       "F Statistic: 90.87064418602546 \tp-value: 1.7797433543986758e-39 \n",
       "\n",
-      "ANOVA test for mean free_sulfur_dioxide across all wines with different quality ratings\n",
+      "ANOVA test for mean free_sulfur_dioxide across all white wines with 3 different quality ratings\n",
       "F Statistic: 0.5909833608324854 \tp-value: 0.5538219567015075 \n",
       "\n",
-      "ANOVA test for mean total_sulfur_dioxide across all wines with different quality ratings\n",
+      "ANOVA test for mean total_sulfur_dioxide across all white wines with 3 different quality ratings\n",
       "F Statistic: 76.66028143448855 \tp-value: 1.650541621040454e-33 \n",
       "\n",
-      "ANOVA test for mean density across all wines with different quality ratings\n",
+      "ANOVA test for mean density across all white wines with 3 different quality ratings\n",
       "F Statistic: 209.69457693191376 \tp-value: 4.1941323440944663e-88 \n",
       "\n",
-      "ANOVA test for mean pH across all wines with different quality ratings\n",
+      "ANOVA test for mean pH across all white wines with 3 different quality ratings\n",
       "F Statistic: 19.690945958199926 \tp-value: 3.0377212959215113e-09 \n",
       "\n",
-      "ANOVA test for mean sulphates across all wines with different quality ratings\n",
+      "ANOVA test for mean sulphates across all white wines with 3 different quality ratings\n",
       "F Statistic: 7.115761884652371 \tp-value: 0.0008206303019817734 \n",
       "\n",
-      "ANOVA test for mean alcohol across all wines with different quality ratings\n",
+      "ANOVA test for mean alcohol across all white wines with 3 different quality ratings\n",
       "F Statistic: 478.1628922043277 \tp-value: 2.0647901873531918e-190 \n",
       "\n"
      ]
@@ -1955,50 +1955,50 @@
     "    F, p = stats.f_oneway(ww_3ql[ww_3ql['quality_label'] == 'low'][X],\n",
     "    ww_3ql[ww_3ql['quality_label'] == 'medium'][X],\n",
     "    ww_3ql[ww_3ql['quality_label'] == 'high'][X])\n",
-    "    print(\"ANOVA test for mean\", X, \"across all wines with different quality ratings\")\n",
+    "    print(\"ANOVA test for mean\", X, \"across all white wines with 3 different quality ratings\")\n",
     "    print('F Statistic:', F, '\\tp-value:', p, \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ANOVA test for mean fixed_acidity across all wines with different quality ratings\n",
+      "ANOVA test for mean fixed_acidity across all white wines with 4 quality ratings\n",
       "F Statistic: 17.790562174947635 \tp-value: 1.755691967989088e-11 \n",
       "\n",
-      "ANOVA test for mean volatile_acidity across all wines with different quality ratings\n",
+      "ANOVA test for mean volatile_acidity across all white wines with 4 quality ratings\n",
       "F Statistic: 89.20422115904348 \tp-value: 3.370028555771532e-56 \n",
       "\n",
-      "ANOVA test for mean citric_acid across all wines with different quality ratings\n",
+      "ANOVA test for mean citric_acid across all white wines with 4 quality ratings\n",
       "F Statistic: 2.356332980607983 \tp-value: 0.06986638384671134 \n",
       "\n",
-      "ANOVA test for mean residual_sugar across all wines with different quality ratings\n",
+      "ANOVA test for mean residual_sugar across all white wines with 4 quality ratings\n",
       "F Statistic: 27.774541837997024 \tp-value: 8.368534159597376e-18 \n",
       "\n",
-      "ANOVA test for mean chlorides across all wines with different quality ratings\n",
+      "ANOVA test for mean chlorides across all white wines with 4 quality ratings\n",
       "F Statistic: 84.18385157999884 \tp-value: 4.180546165598879e-53 \n",
       "\n",
-      "ANOVA test for mean free_sulfur_dioxide across all wines with different quality ratings\n",
+      "ANOVA test for mean free_sulfur_dioxide across all white wines with 4 quality ratings\n",
       "F Statistic: 2.0796966268458466 \tp-value: 0.10068700914283754 \n",
       "\n",
-      "ANOVA test for mean total_sulfur_dioxide across all wines with different quality ratings\n",
+      "ANOVA test for mean total_sulfur_dioxide across all white wines with 4 quality ratings\n",
       "F Statistic: 68.83526825889876 \tp-value: 1.3511211243173506e-43 \n",
       "\n",
-      "ANOVA test for mean density across all wines with different quality ratings\n",
+      "ANOVA test for mean density across all white wines with 4 quality ratings\n",
       "F Statistic: 204.88277401958499 \tp-value: 3.481972191452717e-125 \n",
       "\n",
-      "ANOVA test for mean pH across all wines with different quality ratings\n",
+      "ANOVA test for mean pH across all white wines with 4 quality ratings\n",
       "F Statistic: 19.117607952911044 \tp-value: 2.538261645176523e-12 \n",
       "\n",
-      "ANOVA test for mean sulphates across all wines with different quality ratings\n",
+      "ANOVA test for mean sulphates across all white wines with 4 quality ratings\n",
       "F Statistic: 7.0728474251079065 \tp-value: 9.68309737206369e-05 \n",
       "\n",
-      "ANOVA test for mean alcohol across all wines with different quality ratings\n",
+      "ANOVA test for mean alcohol across all white wines with 4 quality ratings\n",
       "F Statistic: 451.21399266524975 \tp-value: 8.042565364274478e-259 \n",
       "\n"
      ]
@@ -2011,7 +2011,7 @@
     "        ww_4ql[ww_4ql['quality_label'] == 'medium'][X],\n",
     "        ww_4ql[ww_4ql['quality_label'] == 'high'][X],\n",
     "        ww_4ql[ww_4ql['quality_label'] == 'premium'][X])\n",
-    "    print(\"ANOVA test for mean\", X, \"across all wines with different quality ratings\")\n",
+    "    print(\"ANOVA test for mean\", X, \"across all white wines with 4 quality ratings\")\n",
     "    print('F Statistic:', F, '\\tp-value:', p, \"\\n\")"
    ]
   },
